--- a/blog/_posts/2015/2015-11-17-2030-watch.markdown
+++ b/blog/_posts/2015/2015-11-17-2030-watch.markdown
@@ -1,34 +1,32 @@
 ---
-author: Johanna zum Felde
+author: OKF
 categories:
 - Featured
-- SDG
+- Open Data Index
 - Open Knowledge
 date: 2015-11-17 12:00:56
 image:
-  src: http://okfn.de/files/blog/2015-11/2030-Watch.png
+  src: 
 layout: post
 published: true
 status: publish
 tags:
-- Bildung
 - Transparenz
-title: "Klimaneutral und garantiert malariafrei: Das neue OKF DE Projekt 2030-Watch"
+title: "Deutschland im weltweiten Open Data Index nur auf Platz 26"
 type: post
 
 
 ---
 <br>
-Ein neues internationales Abkommen für eine bessere Welt? Neue globale Ziele für eine nachhaltige, gerechte Zukunft für alle? Und wie kann ich deren tatsächliche Umsetzung im Blick behalten? Für die kürzlich von den Vereinten Nationen (UN) verabschiedeten [Ziele zur nachhaltigen Entwicklung (Sustainable Development Goals - SDGs)](http://menschliche-entwicklung-staerken.dgvn.de/menschliche-entwicklung/ziele-fuer-nachhaltige-entwicklung-sdgs/) haben wir uns mit dem neuen [OKF DE Projekt 2030-Watch](http://www.2030-watch.de/) etwas ausgedacht.
+Deutschland fällt in Sachen Open Data hinter einen Großteil der Industrienationen zurück. Das geht aus dem [Open Data Index 2015](http://index.okfn.org/place/) hervor, der heute von der Open Knowledge Foundation veröffentlicht wurde.
 
-![image](http://okfn.de/files/blog/2015-11/2030-watch-screenshot.png)
+<iframe width="100%" height="360px" src="/vis/map/embed/?embed_width=100%&embed_height=360px&filter_year=2015&filter_dataset=all&panel_tools=false&panel_share=false&embed_title=Germany ; 2015&map_place=de" frameBorder="0"></iframe>
 
-Alle UN Mitgliedsstaaten haben sich am 25. September 2015 verpflichtet die [17 Ziele](http://menschliche-entwicklung-staerken.dgvn.de/menschliche-entwicklung/ziele-fuer-nachhaltige-entwicklung-sdgs/) und 169 Unterziele bis 2030 umzusetzen. Das Neue an den SDGs ist, dass sie sich im Gegensatz zu vorherigen Entwicklungszielen nicht nur an Entwicklungsländer richten, sondern gerade auch an Industrienationen wie Deutschland. So sollen die SDGs nicht nur die Armut abschaffen, sondern unter anderen auch bestehende Ungleichheiten in und unter den Ländern beseitigen und den Klimawandel bekämpfen.
+Landete [Deutschland](http://index.okfn.org/place/germany/) im letzten Jahr noch auf Platz 9, liegt es jetzt auf Platz 26 der Rangliste. Während das Land sich in keiner der Kategorien verbessern konnte, verlor es in den Bereichen Gesetzgebung und Unternehmensregister sogar an Punkten, da dieses Jahr das Vergleichsverfahren mit anderen Ländern verfeinert wurde.
 
-In Deutschland sollen die SDGs in der [nationalen Nachhaltigkeitsstrategie](http://www.bundesregierung.de/Webs/Breg/DE/Themen/Nachhaltigkeitsstrategie/_node.html) verankert werden. Dazu braucht es ambitionierte Indikatoren, die es ermöglichen die Umsetzung eines jeweiligen Zieles zu messen. Um die Umsetzung der SDGs durch die Nachhaltigkeitsstrategie transparent und nachvollziehbar zu machen, haben wir in den letzten Wochen bestehende Indikatoren zur Messung der Ziele begutachtet, selektiert und neue Indikatoren entwickelt. Wir haben Daten in internationalen Datenportalen wie der Weltbank, der Weltgesundheitsorganisation oder der EU recherchiert, aufbereitet und anhand von Optimalwerten wie aus internationalen Vereinbarungen oder im Verhältnis zu anderen [OECD-Ländern](http://www.laenderdaten.info/Staatenbuendnis/OECD.php) bewertet. So kann man nun auf 2030-Watch.de den Umsetzungstand von derzeit 50 Indikatoren wie Haushaltsmüll oder den Anteil erneuerbarer Energien am gesamten Energieverbrauch anhand von einem fünftönigen Farbschema einfach erkennen.
+[Bewertet wird im Open Data Index](http://2015.index.okfn.org/methodology/), ob staatliche Daten zu insgesamt 13 gesellschaftlich relevanten Bereichen existieren, in digitaler Form vorliegen und öffentlich zugänglich sind. Darüber hinaus wird bewertet, ob sie online und kostenfrei sind, und in regelmäßigen Abständen aktualisiert werden. Weiterhin gibt es Punkte für offene Lizenzen, Maschinenlesbarkeit und große zusammenhängende Datenmengen.
 
-2030-Watch ist gegenwärtig vor allem als Diskussionsgrundlage dazu gedacht, wie das Monitoring der SDGs in Deutschland aussehen könnte. Daher war es unser Ziel, möglichst schnell Orientierungswerte und eine Plattform für eine deutsche Diskussion um die Implementierung der SDGs bereitzustellen. Datenqualität, Datenumfang und die Funktionalität der Webseite sind noch im Aufbau und sollen mit der Hilfe Eures Feedbacks und Eurer Unterstützung kontinuierlich verbessert werden.
+In einigen Bereichen liegt Deutschland besonders weit hinten. Dazu zählt die Transparenz bei Vergabeausschreibungen (60%), Landeigentumsdaten (20%), Daten zu Wasserqualität (10%), Wettervorhersagen (0%) und Regierungsausgaben (10%).
 
-Schon jetzt gibt es auf 2030-watch.de verschiedene Filter wie einzelne Ziele, ministerielle Zuständigkeiten oder (in-)offizielle Indikatoren, die eine gezielte Suche nach Informationen erleichtern. Zudem ist es möglich Deutschland mit anderen Ländern zu vergleichen. Welche Länder das sind und wieviele Einzelindikatoren pro Land betrachtbar sind, ist jedoch stark von der allgemeinen Datenlage abhängig. Oftmals sind Daten, die für das Messen der globalen Ziele notwendig sind ganz einfach nicht verfügbar. Aus dem Grund hat eine vom UN-General Sekretär Ban Ki-moon berufene Expertengruppe nichts geringeres als eine [Datenrevolution](http://www.undatarevolution.org/) ausgerufen.
-
-In den nächsten Monaten wollen wir 120 Indikatoren auf 2030-watch.de online stellen. Dargestellte Indikatoren sollen in Zukunft mit weiteren Informationen und Kontextvisualisierungen ergänzt werden und schwer messbare Indikatoren sollen zusammen mit Partnern messbar gemacht werden. Schon jetzt ist der Code für 2030-Watch offen und auf [Github](https://github.com/okfde/2030-watch.de) verfügbar, damit andere die bisherige Arbeit übernehmen, verändern, verbessern und auf andere Länder übertragen können. Vielleicht noch nicht ohne Bugs... aber garantiert ohne Malaria!
+Bei den Daten zu Wahlergebnissen fällt Deutschland von 100% im vergangenen Jahr auf 0% in diesem Jahr zurück. Das liegt daran, dass die Definition der zu veröffentlichenden Daten spezifiziert wurde. Alle Daten sollen auf Ebene der Wahlstationen verfügbar sein. In Deutschland sind Daten nur an Orten mit über 100.000 Personen verfügbar. Auch andere Länder wie Großbritannien haben aufgrund dieser Änderungen Punkte verloren. Bei den Wetterdaten gab es auch eine Nullnummer für Deutschland, Grund dafür sind hier die nicht erreichten fünf Prognosetage der Wetterdaten. 
+Taiwan landet nach dieser Bewertung auf dem auf dem ersten Rang, gefolgt vom Vorjahresersten Großbritannien und Dänemark, Kolumbien und Finnland. 
