--- a/blog/_posts/2015/2015-12-31-31c3.markdown
+++ b/blog/_posts/2015/2015-12-31-31c3.markdown
@@ -5,7 +5,7 @@ authors:
 date: 2015-12-31 19:48:00
 image: 
   src : /files/blog/2015-12/32c3.jpg
-  license: [CC-BY](https://creativecommons.org/licenses/by/2.0/) [Ingo Kleiber](https://www.flickr.com/photos/60414447@N08/)
+  license: CC-BY Ingo Kleiber
 type: post
 layout: post
 card: true
