fixed Wikicon blog entry

--- a/blog/_posts/2016/2016-05-22-wikicon.md
+++ b/blog/_posts/2016/2016-05-22-wikicon.md
@@ -4,7 +4,7 @@ authors:
 date: 2016-05-22 20:00:00
 image:
   src: /files/blog/2016/05/DasK_2016-03.jpg
-  title: Der Veranstaltungort: Das K – Kultur- und Kongresszentrum
+  title: Der Veranstaltungort - Das K – Kultur- und Kongresszentrum
   license: CC-BY-SA Mussklprozz
 type: post
 layout: post
