--- a/blog/_posts/2016/2016-07-26-ogp.md
+++ b/blog/_posts/2016/2016-07-26-ogp.md
@@ -16,7 +16,7 @@ title: "Aufruf: Beteiligt Euch an der Erarbeitung eines Nationalen Arbeitsplans 
 
 Die Bundesrepublik Deutschland tritt der internationalen Initiative „Open Government Partnership“ zur Konkretisierung eines offenen Regierungs- und Verwaltungshandelns bei. Dies hat die Bundesregierung beim deutsch-französischen Ministerrat im April 2016 erklärt. Der zivilgesellschaftliche Arbeitskreis für einen Beitritt Deutschlands zur Open Government Partnership legt nun einen ersten Entwurf für einen Nationalen Arbeitsplan Deutschlands zur Open Government Partnership vor, der jetzt gemeinsam ausgebaut werden soll. Die OGP ist ein internationales Bündnis aus inzwischen 70 Staaten, die sich der Idee eines offenen, transparenten, kooperativen Regierungs- und Verwaltungshandelns unter Anwendung moderner Technologien verpflichtet haben. Kernelement dieses neuen Regierungsverständnis ist die Zusammenarbeit zwischen Zivilgesellschaft und Staat, um Regierungs- und Verwaltungshandeln besser zu machen und passendere Lösungen für gesellschaftliche Herausforderungen zu entwickeln. Damit ist die OGP für die Zivilgesellschaft eine seltene Gelegenheit, sich mit ihren Themen in die politische Agendasetzung einzubringen.
 
-Zur Strukturierung der vorhandenen Optionen und zu deren Bewertung wurde vom Arbeitskreis ein erstes <a href="https://docs.google.com/document/d/1s3hDmn-eRO7zyT0qI8m1_BxPEpUWELUJkTV03G6DwbY/edit" target="_blank">Grundlagenpapier</a> erarbeitet. Dieser erste Entwurf soll in den kommenden Monaten gemeinsam als lebendiges Dokument weiterentwickelt werden. Der zur Kommentierung offene Entwurf für einen Nationalen Arbeitsplan Deutschlands zur Open Government Partnership findet sich als offenes Dokument unter: <a href="https://docs.google.com/document/d/1s3hDmn-eRO7zyT0qI8m1_BxPEpUWELUJkTV03G6DwbY/edit" target="_blank">https://docs.google.com/document/d/1s3hDmn-eRO7zyT0qI8m1_BxPEpUWELUJkTV03G6DwbY/edit</a> Der Entwurf dient zugleich als Einladung für weitere zivilgesellschaftliche Akteure aller Themenfelder, sich aktiv an der Ausgestaltung der deutschen OGP-Mitgliedschaft zu beteiligen und eigene Ideen einzubringen.
+Zur Strukturierung der vorhandenen Optionen und zu deren Bewertung wurde vom Arbeitskreis ein erstes <a href="https://docs.google.com/document/d/1s3hDmn-eRO7zyT0qI8m1_BxPEpUWELUJkTV03G6DwbY/edit" target="_blank">Grundlagenpapier</a> erarbeitet. Dieser erste Entwurf soll in den kommenden Monaten gemeinsam als lebendiges Dokument weiterentwickelt werden. Der zur Kommentierung offene Entwurf für einen Nationalen Arbeitsplan Deutschlands zur Open Government Partnership findet sich als <a href="https://docs.google.com/document/d/1s3hDmn-eRO7zyT0qI8m1_BxPEpUWELUJkTV03G6DwbY/edit" target="_blank">kommentierbares GoogleDoc Dokument hier</a>. Zusätzlich gibt es auch eine <a href="https://opengovpartnership.de/files/2016/07/OGP-160722-Grundlagenpapier_AK_OGP_Deutschland_Empfehlungen-nationale_Aktionsplaene_V_1_0.pdf" target="_blank">PDF-Version</a>, eine <a href="https://opengovpartnership.de/files/2016/07/OGP-160722-Grundlagenpapier_AK_OGP_Deutschland_Empfehlungen-nationale_Aktionsplaene_V_1_0.odt" target="_blank">ODT-Version</a> und ein <a href="https://opengovpartnership.de/files/2016/07/OGP-160722-Grundlagenpapier_AK_OGP_Deutschland_Empfehlungen-nationale_Aktionsplaene_V_1_0.docx" target="_blank">Word-Dokument</a>. Der Entwurf dient zugleich als Einladung für weitere zivilgesellschaftliche Akteure aller Themenfelder, sich aktiv an der Ausgestaltung der deutschen OGP-Mitgliedschaft zu beteiligen und eigene Ideen einzubringen.
 
 Natürlich bleibt es die Aufgabe der Bundesregierung, im Herbst 2016 eine Beitrittserklärung zur Open Government Partnership zu stellen und einen Nationalen Aktionsplan zu konkretisieren. Dennoch ist der Entwurf dazu eine wertvolle Grundlage, da er die Überlegungen der Zivilgesellschaft strukturiert zusammenträgt.
 
