--- a/blog/_posts/2016/2016-07-26-ogp.md
+++ b/blog/_posts/2016/2016-07-26-ogp.md
@@ -22,13 +22,13 @@ Natürlich bleibt es die Aufgabe der Bundesregierung, im Herbst 2016 eine Beitri
 
 # Über den Arbeitskreis Open Government Partnership Deutschland:
 Der <a href="http://opengovpartnership.de" target="_blank">„Arbeitskreis OGP“</a> setzt sich für die aktive Mitwirkung Deutschlands in der Open Government Partnership ein. Der Arbeitskreis ist ein offener Zusammenschluss von zivilgesellschaftlichen Organisationen, Wissenschaftsvertretern und interessierten Einzelpersonen. Im OGP Arbeitskreis sind Experten aus allen Dimensionen von Open Government vertreten. Die Mitglieder des Arbeitskreises verbindet die gemeinsame Überzeugung, dass eine gestaltende Beteiligung/Teilnahme der Bundesrepublik Deutschland an der Open Government Partnership einen Kulturwandel zu mehr Offenheit, Transparenz, Bürgerbeteiligung und damit eine Stärkung der repräsentativen Demokratie und ihrer Handlungsfähigkeit zur Folge hat.
-Auflistung der Mitglieder: https://opengovpartnership.de/arbeitskreis
-Homepage: https://opengovpartnership.de
-Kontakt: info@ogphub.de    
+<br>Auflistung der Mitglieder: <a href="https://opengovpartnership.de/arbeitskreis" target="_blank">https://opengovpartnership.de/arbeitskreisy</a>
+<br>Homepage: <a href="https://opengovpartnership.de" target="_blank">https://opengovpartnership.de</a>
+<br>Kontakt: info@ogphub.de    
 
 
 # Über die Open Government Partnership:
 Die OGP ist ein 2011 gegründetes internationales Bündnis aus inzwischen 70 Staaten, die sich der alle Idee eines offenen, transparenten, kooperativen, nachvollziehbaren Regierungs- und Verwaltungshandelns unter Anwendung moderner Technologien verpflichtet und dies mit mehr als 2250 Zusagen auch unterstreichen haben.
-Selbstdarstellung: http://www.opengovpartnership.org/about
-Homepage: http://www.opengovpartnership.org
-Kontakt: info@opengovpartnership.org
+<br>Selbstdarstellung: <a href="http://www.opengovpartnership.org/about" target="_blank">http://www.opengovpartnership.org/about</a>
+<br>Homepage: <a href="http://www.opengovpartnership.org" target="_blank">http://www.opengovpartnership.org</a>
+<br>Kontakt: info@opengovpartnership.org
