Update OGP Post

--- a/blog/_posts/2016/2016-07-26-ogp.md
+++ b/blog/_posts/2016/2016-07-26-ogp.md
@@ -22,7 +22,7 @@ Natürlich bleibt es die Aufgabe der Bundesregierung, im Herbst 2016 eine Beitri
 
 # Über den Arbeitskreis Open Government Partnership Deutschland:
 Der <a href="http://opengovpartnership.de" target="_blank">„Arbeitskreis OGP“</a> setzt sich für die aktive Mitwirkung Deutschlands in der Open Government Partnership ein. Der Arbeitskreis ist ein offener Zusammenschluss von zivilgesellschaftlichen Organisationen, Wissenschaftsvertretern und interessierten Einzelpersonen. Im OGP Arbeitskreis sind Experten aus allen Dimensionen von Open Government vertreten. Die Mitglieder des Arbeitskreises verbindet die gemeinsame Überzeugung, dass eine gestaltende Beteiligung/Teilnahme der Bundesrepublik Deutschland an der Open Government Partnership einen Kulturwandel zu mehr Offenheit, Transparenz, Bürgerbeteiligung und damit eine Stärkung der repräsentativen Demokratie und ihrer Handlungsfähigkeit zur Folge hat.
-<br>Auflistung der Mitglieder: <a href="https://opengovpartnership.de/arbeitskreis" target="_blank">https://opengovpartnership.de/arbeitskreisy</a>
+<br>Auflistung der Mitglieder: <a href="https://opengovpartnership.de/arbeitskreis" target="_blank">https://opengovpartnership.de/arbeitskreis</a>
 <br>Homepage: <a href="https://opengovpartnership.de" target="_blank">https://opengovpartnership.de</a>
 <br>Kontakt: info@ogphub.de    
 
