--- a/blog/_posts/2016/2016-08-08-okf-at-ogp.md
+++ b/blog/_posts/2016/2016-08-08-okf-at-ogp.md
@@ -3,7 +3,7 @@ authors:
 - Mara Mendes
 date: 2016-08-08 15:00
 image:
-  src: /files/blog/2016/08/OKF-at-OGP.pdf
+  src: /files/blog/2016/08/OKF-at-OGP.jpg
   title: OGP   
 type: post
 layout: post
