--- a/blog/_posts/2016/2016-12-16-odgesetz.md
+++ b/blog/_posts/2016/2016-12-16-odgesetz.md
@@ -11,7 +11,7 @@ layout: post
 card: true
 tags:
 - Open-Data-Gesetz
-title: "Entwurf des Open-Data-Gesetzes: Ergänzung des E-Goverment-Gesetzes geplant"
+title: "Entwurf des Open-Data-Gesetzes: Ergänzung des E-Government-Gesetzes geplant"
 ---
 
 Das Open-Data-Gesetz wird zu einer Reform des [E-Government-Gesetz](https://www.gesetze-im-internet.de/egovg/__12.html). Das zeigt der Entwurf für das Gesetz, den wir [hier veröffentlichen](https://github.com/okfde/okfn.de/raw/master/files/blog/2016/12/egov12a.pdf). Der Entwurf wurde heute kurzfristig an Verbände zur Stellungnahme bis zum Jahresende versendet.
