update to jeykll 3

--- a/blog/_posts/2014/2014-06-23-4079.markdown
+++ b/blog/_posts/2014/2014-06-23-4079.markdown
@@ -10,6 +10,7 @@ tags:
 - Code for Germany
 - Coding Da Vinci
 - Jugend hackt
+- republica
 title: Aktivitäten und Projekte im Mai 2014
 type: post
 ---
