--- a/blog/_posts/2017/2017-02-17-akogp.md
+++ b/blog/_posts/2017/2017-02-17-akogp.md
@@ -7,7 +7,7 @@ image:
   src: /files/blog/2017/02/Timeline.png
   title: 
   license: Source: BMI (Stand 21.02.2017)
-  license_url: http://www.verwaltung-innovativ.de/DE/Internationales/OGP/zeitlicher_ablauf/zeitlicher_ablauf_node.html
+  license_url: "http://www.verwaltung-innovativ.de/DE/Internationales/OGP/zeitlicher_ablauf/zeitlicher_ablauf_node.html"
 tags:
 - OGP
 - Transparenz 
