--- a/blog/_posts/2017/2017-02-17-akogp.md
+++ b/blog/_posts/2017/2017-02-17-akogp.md
@@ -16,12 +16,12 @@ tags:
 type: 
 layout: 
 card: true
-published: false
+published: true
 title: "Wir sind dabei - Auftakt zum Aktionsplan für offenes Regierungs- und Verwaltungshandeln" 
 ---
 Wir waren letzten Freitag, den 17.02.2017 bei dem Auftaktworkshop für einen nationalen Aktionsplan Open Government Partnership (OGP) im Bundesinnenministerium und haben uns bereit erklärt die Arbeit in der Themengruppen [Offene Daten](https://pad.okfn.de/p/NAP-offeneDaten) sowie [Informationsfreiheit und Transparenz](https://pad.okfn.de/p/NAP-Informationsfreiheit_Transparenz ) zu leiten. Darüber hinaus tragen wir zu weiteren Themenfeldern bei. Eine Übersicht aller bisher vorgeschlagenen Themenfelder befindet sich [hier](https://pad.okfn.de/p/Themencluster_OGP_NAP). 
 
-Die OKF DE ist Teil des Arbeitskreis Open Government Partnership und koordiniert ihn in Kooperation mit der [Stiftung Neue Verantwortung](https://www.stiftung-nv.de). Der Arbeitskreis hat eine gemeinsame Pressemitteilung veröffentlicht, die wir hier darstellen:
+Die OKF DE ist Teil des Arbeitskreis Open Government Partnership und koordiniert ihn. Der Arbeitskreis hat eine gemeinsame Pressemitteilung veröffentlicht, die wir hier darstellen:
 
 
 
