--- a/blog/_posts/2017/2017-02-17-akogp.md
+++ b/blog/_posts/2017/2017-02-17-akogp.md
@@ -13,8 +13,8 @@ tags:
 - Transparenz 
 - Offene Daten
 - Open Government
-type: 
-layout: 
+type: post 
+layout: post 
 card: true
 published: true
 title: "Wir sind dabei - Auftakt zum Aktionsplan für offenes Regierungs- und Verwaltungshandeln" 
