--- a/blog/_posts/2017/2017-03-02-ranking.md
+++ b/blog/_posts/2017/2017-03-02-ranking.md
@@ -6,8 +6,9 @@ image:
   src: /files/blog/2017/02/ranking.jpg
   title: 
 tags:
-- Events
-- Open Data
+- Transparenz
+- Informationsfreiheit
+- Transparenzranking
 type: post
 layout: post
 card: true
