--- a/blog/_posts/2017/2017-03-02-ranking.md
+++ b/blog/_posts/2017/2017-03-02-ranking.md
@@ -18,7 +18,7 @@ title: "Erstes deutsches Transparenzranking: Bund schneidet schlecht ab"
 
 Am 2. März 2017 hat die Open Knowledge Foundation Deutschland das erste Transparenz-Ranking herausgegeben, das in Zusammenarbeit mit der Mehr Demokratie entstanden ist. Das Ergebnis der Untersuchung: In vielen Bundesländern wird den Bürger/innen der Zugang zu Behördeninformationen schwer oder sogar ganz unmöglich gemacht.
 
-Oftmals müssen Behörden nur sehr begrenzt Auskunft geben, darunter die Landtage, Hochschulen und der Verfassungsschutz. Hinzu kommen teilweise abschreckend hohe Gebühren und lange Antwortfristen. Elf von 16 Bundesländern erhielten in der Bewertung deshalb weniger als die Hälfte der möglichen Punktzahl. Spitzenreiter im Transparenz-Ranking ist Hamburg. Das Parlament der Hansestadt hatte 2012 nach einer Volksinitiative das bundesweit erste Transparenzgesetz verabschiedet.
+Oftmals müssen Behörden nur sehr begrenzt Auskunft geben, darunter die Landtage, Hochschulen und der [Verfassungsschutz](https://fragdenstaat.de/verfassungsschutz/). Hinzu kommen teilweise abschreckend hohe Gebühren und lange Antwortfristen. Elf von 16 Bundesländern erhielten in der Bewertung deshalb weniger als die Hälfte der möglichen Punktzahl. Spitzenreiter im Transparenz-Ranking ist Hamburg. Das Parlament der Hansestadt hatte 2012 nach einer Volksinitiative das bundesweit erste Transparenzgesetz verabschiedet.
 
 Damit wurde die Holschuld der Bürger/innen in eine Bringschuld der Behörden umgewandelt. Bürger/innen müssen oft nicht mehr umständlich Auskunftsanfragen stellen, sondern finden fast alle wichtigen Informationen in einem eigens eingerichteten Internetportal. Online gestellt sind hier etwa Gutachten, Senatsbeschlüsse und Verträge ab 100.000 Euro, die die Daseinsvorsorge betreffen.
 
