--- a/blog/_posts/2017/2017-09-31-Energy-Hack-2017.md
+++ b/blog/_posts/2017/2017-09-31-Energy-Hack-2017.md
@@ -11,106 +11,108 @@ type: post
 layout: post
 published: false
 card: true
-title: "Unsere neue Kunstedition: Jetzt für Fördermitglieder!" 
+title: "Rückblick Energyhack 2017: Du hast die Wahl!" 
 ---
 
-Der Energyhack fand am 22. und 23. September statt. Passend zum Wahlwochende lautete das Motto "Du hast die Wahl" - bzgl. Daten-, Stromfreiheit und nachhaltiger Energiewende.
+Am 22. und 23. September fand der dritte Energyhack von [Stromnetz Berlin](https://www.stromnetz-berlin.de/) und Open Knowledge Foundation statt. Passend zum Wahlwochende lautete das Motto "Du hast die Wahl". Wir freuten uns über euer großes Interesse und wollen an dieser Stelle allen die nicht dabei sein konnten einen Überblick geben was alles an dem Wochenende passierte und welche Projekte entstanden sind.
 
-Der Energyhack "Du hast die Wahl" ist bereits der dritte Hackday zum Thema Energieversorgung nach 2013 und 2015, durchgeführt von der Open Knowledge Foundation Deutschland und Stromnetz Berlin in Kooperation mit TSB, ... moegliche Partner (MKMK).
+Ziel des Hackdays war es innerhalb von 24h mit offenen Daten aus dem Energiesektor kreative Projekte umzusetzen, um die Gesellschaft stärker für die Themen Strom-, Energienetze und Energiewende zu sensibilisieren und Anwendungen für diese Bereiche zu entwickeln. Nach den erfolgreichen Energyhacks 2013 und 2015 fand die diesjährige Veranstaltung im Kontext des Forschungsprojekts WindNODE statt. Dadurch hatten wir die Chance weitere Betriebe der Daseinsvorsorge wie die Berliner Wasserbetriebe als Unterstützer und Bereitsteller von offenen Daten zu gewinnen.
 
-Ziel des Hackdays war es, in einem experimentellen Rahmen des [Infralabs Berlin](http://infralab.berlin/) Projektideen zu entwickelt, um die Gesellschaft stärker für die Themen Strom-, Stromtransport und Energiewende zu sensibilisieren und Anwendungen für diese Bereiche zu entwickeln. 
+Mit dem [Infralabs Berlin](http://infralab.berlin/) auf dem EUREF-Campus hatten wir den perfekten Ort für die Veranstaltung. So boten der Campus, das Micro Smart Grid und das Gasometer vielfältige Möglichkeiten die Energiewende live zu erleben. 
 
 ![Hackday](/files/blog/2017/09/energyhack-infralab.jpg "Impulsreferate")</br>
-Location Infralab mit Hackaton-Spielzeug davor
-
-
-Die Projekte und Diskussionen zwischen den Entwickler/innen und Energie-Expert/innen 
-sollten zu neuen Anregungen für innovative Lösungsansätze führen.
-
-Ein Fokus dieser Auftaktveranstaltung im Rahmen des WindNODE Projektes war auch weitere Daseinsvorsorger in Berlin in Zusammenarbeit  mit StromnetzBerlin zu weitere Datenöffnung zu motivieren.
-
+Infralab mit Auswahl an Hackathon-Spielzeug
 
 <h4>Kick-Off und Impulse</h4>
 
-Zu Beginn des Tages ging es darum, zu verstehen, wodurch ein Stromausfall entstehen kann und wie die Energieversorgung bspw. in Berlin aufgebaut ist. Die größten gesellschaftlichen Herausforderungen bei einem Stromfall umfassen den Austausch 
-von Informationen und lebensnotwendigen Ressourcen sowie das Zusammenbrechen bestehender Infrastrukturen. 
+Auf der Auftaktveranstaltung am Freitag Nachmittag hatten wir die Gelegenheit Energie- und Datenexperten, Entwicklerinnen und Forscher an einen Tisch zu bringen. Bei zwei Paneldiskussionen wurden Fragen von Datennutzung und Datenschutz aber auch innovative Ansätze zur Energienutzung in der Stadt von morgen diskutiert. Dabei kam immer wieder heraus, wie wichtig, zum Beispiel im Umgang mit Lastspitzen der übergreifende Informationsaustausch zwischen Produzenten, Verbraucher, Netzbetreiber und Behörden ist. Offene Standards und Daten spielen den Expertinnen zufolge dabei eine Schlüsselrolle. 
 
 ![Hackday](/files/blog/2017/09/energyhack-intro.jpg "Impulsreferate")</br>
-Panel: Thomas Schäfer (SNB), Nadine Ever (OKFDE), [Frederick Richter Stiftung Datenschutz](https://stiftungdatenschutz.org/startseite/) und [Kathrin Goldammer RLI](https://twitter.com/kagoldammer) 
+Panel 1: Thomas Schäfer (SNB), Nadine Evers (OKFDE), [Frederick Richter Stiftung Datenschutz](https://stiftungdatenschutz.org/startseite/) und [Kathrin Goldammer RLI](https://twitter.com/kagoldammer) 
 
-
-Zusätzlich zum Hackday gab es einen Diversity-Vortrag von Gaby Goldammer und ein drauffolgendes Vernetzungstreffen.
+Auf dem zweiten Panel waren Markus Abel (4cast), [Lars Zimmermann](http://bloglz.de/), Benjamin Horn (Berlin Partner) und Claudia Rathfux (Stromnetz Berlin). 
+Das die Energie- aber auch Technologiebranche oft ihr Potenzial noch nicht ausschöpft, machte Gabriele Schambach während Ihres Inputs zur mangelnden Vielfalt in beiden Sektoren eindrücklich sichtbar. Erlebbare Sektorenkopplung ermöglichte Frau Schambach am späten Freitagabend, als sie im Rahmen des Vernetzungstreffen Energiebranche, Forscherinnen und Entwicklerinnen zusammenbrachte.
 
 ![Hackday](/files/blog/2017/09/energyhack-diversity.jpg "Diversity Vortrag")</br>
 Vernetzungstreffen
 
+Zum Auftakt des Hackathon um 18 Uhr füllte sich das InfraLab noch einmal deutlich. Neben Stromnetz Berlin und [SmartB](http://www.smartb.de/home/) stellten diesmal u. a. auch [Schneider Electric](http://www.schneider-electric.de/de/), [4cast](http://4-cast.de/), die [Berliner Wasserbetriebe](http://www.bwb.de) und die extra angereisten [Netze Baden-Württemberg](https://www.netze-bw.de) Daten vor und in das extra in Betrieb genommene [WindNODE-Datenportal](http://windnode.fokus.fraunhofer.de/dataset?organization=energyhack-2017) ein. Vom eScooter-Verleih [COUP](http://joincoup.com/) und SmartB konnten die Teilnehmerinnen außerdem die API nutzen.
 
-Und auch die Kinderbetreuung fand großen Anklang. 
-Blablah Kinder ... BILD!
+![Strombärchen](/files/blog/2017/09/energyhack-baerchen.jpg "Strombärchen")
+Smarte Strombärchen
 
+<h4>restart</h4>
 
+Nach dem gelungenen Auftakt ging es am Samstag mit den Pitches der Projekte weiter. Wer wollte, konnte im Laufe des Tages an Workshops rund um Arduinos und LoRaWaN der [Technologie Stiftung](https://www.technologiestiftung-berlin.de/) teilnehmen oder sein smartes Strombärchen, dass alle Teilnehmerinnen als Bausatz bekamen, zusammen löten. Dazu gab es die Möglichkeit das Motto "Du hast die Wahl!" im Bereich der Elektromobilität mit Fahrrad, eScooter oder Auto zu erleben. Neben einer Präsentation des autonomen Putzroboters von [Enway](https://www.flickr.com/photos/okfde/36683289753/in/album-72157688869254346/) konnte man sich außerdem das [Micro Smart Grid](https://www.innoz.de/de/micro-smart-grid-msg) oder das Gasometer zeigen lassen. 
 
+<h4>Projekte und Preise</h4>
 
+Trotz der vielfältigen Ablenkungen arbeiteten die Teilnehmerinnen konzentriert an über zwölf tollen Projekten. Darunter auch einige von den Jugendlichen Teilnehmern, die unter anderem ein Bobbycar mit Arduino gesteuerten Hupe und Blinkeranlage ausrüsteten.
 
+![Jugendtrack](/files/blog/2017/09/energyhack-bobbycar.jpg "BobbyCar")
 
-<h4>Projekte und Gewinner/innen</h4>
+Der Jury bestehend aus Saadya Windauer (OKFDE), Markus Graebig (WindNODE) und Thomas Schäfer (Stromnetz Berlin) fiel es so auch schwer Favoriten zu küren. Am Ende setzen sich folgende Projekte in den Kategorien Netze, Energy, Infrastruktur und Mobilität durch. Passend zum Thema gewannen die Teams Führungen durchs Berliner Stromnetz, das Heizkraftwerk in Mitte, ein Klärwerk und Gutscheine für eRoller von COUP sowie Gadgets vom Feinstaubsensor, [Solarstrom-Laderegler](https://wiki.freifunk.net/Freifunk-MPP-Tracker) bis zu Calliopes und LoRaWaN-Shields.
 
-Elf Projekte wurden im Laufe der zwei Tagen entwickelt und präsentier und von unserer Jury prämiert.
-In der Jury saßen: Saady (OKFDE), Markus Gräbnig (WindNODE), Thomas Schäfer (SNB). 
+Gewonnen haben die Projekte:
 
+![Gewinner Energy](/files/blog/2017/09/energyhack-projekt-strombaer.jpg "Projekt Strombär")
+Team Strombär
 
-Gewonnen haben in vier Kategorien : 
-
-Auflistung und Preise, seconds MKMK
-
- - Kategorie Netz: Energydiversity 
- - Kategorie Mobilität: EVcount 
- - Kategorie Energie: Strombär 
- - Kategorie Infrastruktur: Abwasser as a Service 
- 
- 
-
+"Strombär" (Kategorie: Energy)
+Mit der Kopplung und Wiedergabe von aktuellen Stromproduktions- und Verbrauchsdaten mit und auf dem großen Strombären.
 
 
-![Hackday](/files/blog/2017/09/energyhack-tursics.jpg "Tursics")
-Tursics Hattrick 
+![Gewinner Netze](/files/blog/2017/09/energyhack-energydiversity.jpg "EnergyDiversity")
+Team EnergyDiversity
 
-An dieser Stelle stellen sich die Projekte kurz alphabetisch selbst vor. Sie können auch im [Hackdash verfolgt werden](https://hackdash.org/dashboards/energy2017).
-
-
-
-
-Es gab es grossartige Projekte siehe hackdash (auch zum öffnen weiterer Daten) und grossartige Preise für die TeilnehmerInnen und Community (MaximumPowerPoint-Tracker, freifunk-router, ...).  
+"EnergyDiversity" (Kategorie: Netze)
+Das Projekt versucht offene Daten zu nutzen um dem Verbraucher z.B. an Ladesäulen für Elektroautos Informationen über die Quellen und Preise des Stroms zu geben.
 
 
-<h4>30.000.- Euro - Announcement folgt</h4>
+![Gewinner Mobilität](/files/blog/2017/09/energyhack-evcount.jpg "EVCount")
+Team EVCount
 
-Achja, und es gibt 30.000 Euro von Stromnetz Berlin für die Unterstützung von langfristigen, offenen Softwareprojekten. 
+"EVCount" (Kategorie: Mobilität)
+Wie viele Ladesäulen brauchen wir? Welche Anforderungen gibt es ans Stromnetz, wenn 50% der derzeitigen Parkplätze mit Ladeinfrastruktur ausgerüstet werden müssen? 
+
+![Gewinner Infrastruktur](/files/blog/2017/09/energyhack-tursics.jpg "Team Tursics")
+Tursics Hattrick
+
+"Abwasser as a Service" (Kategorie: Infrastruktur)
+Wie funktioniert ein Abwasserpumpwerk und welche Energie wird dabei verbraucht? Das können auch Kinder verstehen, wie hier deutlich gezeigt wurde.
 
 
+Eine Übersicht zu allen Projekten findet ihr hier im [Hackdash](https://hackdash.org/dashboards/energy2017). Wir laden die Teams ein, aktuelle Weiterentwicklungen dort zu dokumentieren. Von einigen Teams wissen wir bereits, dass sie weiter an ihren Projekten arbeiten. Wir hoffen euch in einem Jahr beim nächsten Event wieder zu sehen. 
+Die Erfahrungen aus den letzten Hackdays zeigen, dass die weiterhin nutzbaren offenen Daten den Teilnehmerinnen ermöglichen, nicht nur für den Moment, sondern ein nachhaltiges Projekt zu entwickeln. Mit den verlosten Freifunkroutern und LoRaWaN-Shields kann darüber hinaus die Open Data Community mit verwandten Gemeinschaften zusammenwachsen.
 
-<h4>Danke an die Parnter</h4>
 
-  - Infralab
-  - smartb
-  - 
-  - liste von der Website
+<h4>30.000.- Euro - für Entwicklung über den Prototyp hinaus</h4>
+
+Im Rahmen von WindNode wollen wir noch zwei weitere Community Events rund um offene Energiedaten in den nächsten Jahren durchführen. Um coole Projekte auch zwischen den Veranstaltungen vom Prototyp zum fertigen Produkt entwickeln zu können, hat Stromnetz Berlin einen Fond von 3x 30.000 Euro initiiert. Wir werden in den nächsten Wochen einzelne Projekte mit Potenzial für den Sektor ansprechen und darüber ins Gespräch kommen, was ihr braucht, um euer Projekt fertig zu stellen. Damit wollen wir den Hackday-Effekt abschwächen und fördern das langfristig tolle offene Softwareprojekte umgesetzt werden.
+
+
+<h4>Danke an die Unterstützer</h4>
+
+![FloraPowerMate](/files/blog/2017/09/energyhack-getraenke.png "Getränke Auswahl")
+
+  - Infralab für die super Location
+  - [FloraPowerMate](http://www.flora-power.de/) für die tolle Getränkeauswahl
+  - [COUP](http://joincoup.com/) für mehr Auswahl bei der Fortbewegung
+  - [Frauenhofer Fokus](http://windnode.fokus.fraunhofer.de/dataset) für das Datenportal
+  - [Technologie Stiftung Berlin](https://www.technologiestiftung-berlin.de/) für spannende Workshops
+  - [OK Lab Berlin](http://www.codefor.de/berlin) & [Potsdam](http://www.oklab-potsdam.de/) für Infrastruktur zwischen den Hackdays
+  - uvm. für offene Daten und super Preise! 
+
+
+![Magic Board](/files/blog/2017/09/energyhack-ledwand.jpg "Magic Board") 
+  Besonderen Dank auch an [Alexander Zalesov](https://www.instagram.com/p/BTw6ffCF8qW/?taken-by=zallesov) für sein cooles Magic Board und weitere Lichtinstallationen.
   
- 
- Bild von LED - Wand MKMK
 
-
-Und vielen, herzlichen Dank an die TeilnehmerInnen und allen beteiligten Personen welche diese wunderbaren 2 Tage ermöglicht haben. 
+Danke auch an Dora und Nicco für die Kinderbetreuung, die super zeigte, dass Kinder noch mehr einbezogen gehören. Und vielen, herzlichen Dank an die TeilnehmerInnen und Helferinnen welche diese wunderbaren zwei Tage ermöglicht haben. 
 
 
 Wir freuen uns auf den nächsten Energyhack bzw. kommende Veranstaltung im Rahmen des [WindNODE-Projektes](http://www.windnode.de/).
 
-![Hackday](/files/blog/2017/09/energyhack-baerchen.jpg "Auf Wiedersehen!")</br>
-Auf Wiedersehen!
-
 
 Alle Fotos vom Energyhack "Du hast die Wahl" kann man sich [hier](https://www.flickr.com/photos/okfde/albums/72157688869254346) anschauen. 
-Dankeschön an unseren Fotografen, [Leonard Wolf](https://twitter.com/woleonard) für diese [gelungenen](https://www.flickr.com/photos/okfde/37322472782/in/album-72157688869254346/) [Perlen](https://www.flickr.com/photos/okfde/36682738083/in/album-72157688869254346/) 
-
-
-Und zum Abschluss nochmal das [Hackdash](https://hackdash.org/dashboards/energy2017).
+Dankeschön an unseren Fotografen, [Leonard Wolf](https://twitter.com/woleonard) für die schönen Bilder. Ihr könnt euch auch bereits jetzt auf das Video von [Christian Fussenegger](http://www.zumgrauenbaeren.com/) freuen.
