--- a/blog/_posts/2018/2018-05-18-OHH-GIC.md
+++ b/blog/_posts/2018/2018-05-18-OHH-GIC.md
@@ -3,8 +3,8 @@ authors:
 - Anna Alberts
 date: 2018-05-16
 image:
-  src: 
-  title: 
+  src: /files/blog/2018/05/OHHGIC.jpg
+  title: Offener Haushalt Workshops
 tags:
 - Offener Haushalt
 type: post
