--- a/blog/_posts/2018/2018-05-18-OHH-GIC.md
+++ b/blog/_posts/2018/2018-05-18-OHH-GIC.md
@@ -11,17 +11,18 @@ type: post
 layout: post
 card: true
 published: false
-title: "Stimm’ bei der Google Impact Challenge für Offener Haushalt ab!" 
+title: "Stimme bei der Google Impact Challenge für Offener Haushalt ab!" 
 ---
 
-Die Google Impact Challenge “Kleine Taten” unterstützt kleine Projekte in ganz Deutschland. Und du kannst dabei helfen, 20.000€ für Offener Haushalt zu gewinnen. [Stimm’ hier ab!](https://impactchallenge.withgoogle.com/deutschland2018/charities/okfn)
+Die Google Impact Challenge „Kleine Taten“ unterstützt kleine Projekte in ganz Deutschland. Hilf uns, 20.000€ für Offener Haushalt zu gewinnen. [Stimme hier ab!](https://impactchallenge.withgoogle.com/deutschland2018/charities/okfn)
 
-[»OffenerHaushalt.de«](https://offenerhaushalt.de/) Toolkit: Versteh die Zahlen deiner Stadt!
 
-Über 31 Millionen Menschen engagieren sich ehrenamtlich in ganz Deutschland. Allerdings sank in den letzten Jahren auf kommunalpolitischer Ebene die Bürger*innenbeteiligung immens. Fehlende Beteiligungsmöglichkeiten infolge der Dominanz organisierter Interessen und der Komplexität von politischen Prozessen sind ein Grund dafür. Das Projekt “OffenerHaushalt Toolkit” hat sich zum Ziel gesetzt genau dort anzusetzen und die Komplexität der Kommunalpolitik zu reduzieren  indem es einfach und verständlich die Funktionsweise von öffentlichen Haushalten darstellt. So soll Bürger*innen eine Argumentationsgrundlage für öffentliche Debatten an die Hand gegeben werden. 
+[„OffenerHaushalt.de“](https://offenerhaushalt.de/) Toolkit: Versteh die Zahlen deiner Stadt!
 
-Haushaltspläne dokumentieren in ausführlicher Art und Weise anstehende Veränderungen und Schwerpunktsetzungen in der Politik. Doch meist werden diese Pläne in in PDFs mit 1000 Seiten und mehr veröffentlicht und machen somit ein einfaches Verstehen fast unmöglich. Das erschwert Bürger*innenbeteiligung enorm. Dies greift das Toolkit auf: Mithilfe von technischen Mitteln soll ein grundlegendes Verständnis von Haushalten vermittelt werden, damit sich Bürger*innen sinnvoll und kommunalpolitisch engagieren können. Dadurch werden Themenkomplexe, wie öffentliche Ausgaben für Schulen und Verkehrsmittel, weniger abstrakt und umso greifbarer. [alternativ: Damit bleiben Themenkomplexe, wie öffentliche Ausgaben für Schulen und Verkehrsmittel, nicht mehr ein Buch mit sieben Siegeln.]
+Über 31 Millionen Menschen engagieren sich ehrenamtlich in ganz Deutschland. Allerdings sank die Bürgerbeteiligung in den letzten Jahren auf kommunalpolitischer Ebene immens. Fehlende Beteiligungsmöglichkeiten infolge der Dominanz organisierter Interessen und der Komplexität politischer Prozesse sind ein Grund dafür. Hier setzen wir an! Mit „OffenerHaushalt Toolkit“  wird die Komplexität der Kommunalpolitik reduziert, indem öffentliche Haushalte und deren Funktionsweisen einfach und verständlich dargestellt werden. So wird Bürgerinnen eine Argumentationsgrundlage für öffentliche Debatten an die Hand gegeben.
 
-Mit dem “OffenerHaushalt Toolkit” möchten wir jetzt die Zahlen für kommunale Politik bereitstellen und aktive Bürger*innen ermächtigen Haushaltsdaten zu verstehen und ihre Stadt lokal mitzugestalten!
+Haushaltspläne dokumentieren in ausführlicher Art und Weise anstehende Veränderungen und Schwerpunktsetzungen in der Politik. Doch meist werden diese Pläne in PDFs mit 1000 Seiten und mehr veröffentlicht. Ein einfaches Verstehen ist somit fast unmöglich. Das erschwert Bürgerinnenbeteiligung enorm. Dies greift das Toolkit auf: Wir vermitteln ein grundlegendes Verständnis von Haushalten, damit sich Bürgerinnen sinnvoll und kommunalpolitisch engagieren können. Themenkomplexe, wie öffentliche Ausgaben für Schulen und Verkehrsmittel, werden so weniger abstrakt und somit greifbarer. 
 
-Hilf mit, [stimm’ hier ab](https://impactchallenge.withgoogle.com/deutschland2018/charities/okfn).
+Mit dem „OffenerHaushalt Toolkit“ möchten wir jetzt die Zahlen kommunalel Politik bereitstellen und aktive Bürgerinnen ermächtigen Haushaltsdaten zu verstehen und ihre Stadt lokal mitzugestalten!
+
+Hilf mit und [stimme hier ab](https://impactchallenge.withgoogle.com/deutschland2018/charities/okfn).
