--- a/blog/_posts/2018/2018-05-18-OHH-GIC.md
+++ b/blog/_posts/2018/2018-05-18-OHH-GIC.md
@@ -14,7 +14,7 @@ published: false
 title: "Stimme bei der Google Impact Challenge für Offener Haushalt ab!" 
 ---
 
-Die Google Impact Challenge „Kleine Taten“ unterstützt kleine Projekte in ganz Deutschland. Hilf uns, 20.000€ für Offener Haushalt zu gewinnen. [Stimme hier ab!](https://impactchallenge.withgoogle.com/deutschland2018/charities/okfn)
+Die Google Impact Challenge „Kleine Taten“ unterstützt kleine Projekte in ganz Deutschland. Hilf uns, 20.000€ für Offener Haushalt zu erhalten. [Stimme hier ab!](https://impactchallenge.withgoogle.com/deutschland2018/charities/okfn)
 
 
 [„OffenerHaushalt.de“](https://offenerhaushalt.de/) Toolkit: Versteh die Zahlen deiner Stadt!
@@ -23,6 +23,6 @@ Die Google Impact Challenge „Kleine Taten“ unterstützt kleine Projekte in g
 
 Haushaltspläne dokumentieren in ausführlicher Art und Weise anstehende Veränderungen und Schwerpunktsetzungen in der Politik. Doch meist werden diese Pläne in PDFs mit 1000 Seiten und mehr veröffentlicht. Ein einfaches Verstehen ist somit fast unmöglich. Das erschwert Bürgerinnenbeteiligung enorm. Dies greift das Toolkit auf: Wir vermitteln ein grundlegendes Verständnis von Haushalten, damit sich Bürgerinnen sinnvoll und kommunalpolitisch engagieren können. Themenkomplexe, wie öffentliche Ausgaben für Schulen und Verkehrsmittel, werden so weniger abstrakt und somit greifbarer. 
 
-Mit dem „OffenerHaushalt Toolkit“ möchten wir jetzt die Zahlen kommunalel Politik bereitstellen und aktive Bürgerinnen ermächtigen Haushaltsdaten zu verstehen und ihre Stadt lokal mitzugestalten!
+Mit dem „OffenerHaushalt Toolkit“ möchten wir jetzt die Ausgaben der Städte und Kommunen bereitstellen und aktive Bürgerinnen ermächtigen Haushaltsdaten zu verstehen und ihre Stadt lokal mitzugestalten!
 
-Hilf mit und [stimme hier ab](https://impactchallenge.withgoogle.com/deutschland2018/charities/okfn).
+Hilf mit und [stimme hier für uns ab](https://impactchallenge.withgoogle.com/deutschland2018/charities/okfn).
