--- a/blog/_posts/2018/2018-05-18-OHH-GIC.md
+++ b/blog/_posts/2018/2018-05-18-OHH-GIC.md
@@ -10,7 +10,7 @@ tags:
 type: post
 layout: post
 card: true
-published: false
+published: true
 title: "Stimme bei der Google Impact Challenge für Offener Haushalt ab!" 
 ---
 
